@@ -26,7 +26,10 @@ public class CustomerClassLoaderTest {
     @Test
     void testLoadTestClass() throws Exception {
 
-        customCL = new CustomClassLoader(new File("/Users/zhanguowang/Desktop/project/github/java-agent-example/agent/springAgentInject/target/springAgentInject-1-SNAPSHOT.jar").toURL(), appCl, "template/","","","");
+        customCL = new CustomClassLoader(new URL[]{
+//                new File("/Users/zhanguowang/Desktop/project/github/java-agent-example/agent/springAgentInject/target/springAgentInject-1-SNAPSHOT.jar").toURL(),
+                new URL("/Users/zhanguowang/Documents/popertiesLauncher-0.0.1-SNAPSHOT.jar"),
+        }, appCl, "template/","","","");
         Class<?> t = customCL.loadClass("com.example.agent.template.TestController");
         Assert.assertNotNull(t);
     }
@@ -38,7 +41,10 @@ public class CustomerClassLoaderTest {
     @Test
     void getSourcesTest() throws Exception {
 
-        customCL = new CustomClassLoader(new File("/Users/zhanguowang/Desktop/project/github/java-agent-example/agent/springAgentInject/target/springAgentInject-1-SNAPSHOT.jar").toURL(), appCl, "template/","","","");
+        customCL = new CustomClassLoader(new URL[]{
+//                new File("/Users/zhanguowang/Desktop/project/github/java-agent-example/agent/springAgentInject/target/springAgentInject-1-SNAPSHOT.jar").toURL(),
+               new URL("/Users/zhanguowang/Documents/popertiesLauncher-0.0.1-SNAPSHOT.jar"),
+        }, appCl, "template/","","","");
        Enumeration<URL> urlEnumeration = customCL.getResources("org/apache/logging/log4j/util/Strings");
         Assert.assertNotNull(urlEnumeration);
     }
@@ -48,8 +54,14 @@ public class CustomerClassLoaderTest {
     @Test
     void getResourceAsStreamTest() throws Exception {
 
-        customCL = new CustomClassLoader(new File("/Users/zhanguowang/Desktop/project/github/java-agent-example/agent/springAgentInject/target/springAgentInject-1-SNAPSHOT.jar").toURL(), MyAgent.classLoader, "template","com/example/agentdemo/","com/example/popertieslauncher/","jar:file:/Users/zhanguowang/Documents/popertiesLauncher-0.0.1-SNAPSHOT.jar!/com/example/popertieslauncher/");
-        InputStream stream = customCL.getResourceAsStream("com/example/popertieslauncher/TestController");
+        customCL = new CustomClassLoader(
+                new URL[]{
+//                new File("/Users/zhanguowang/Desktop/project/github/java-agent-example/agent/springAgentInject/target/springAgentInject-1-SNAPSHOT.jar").toURL(),
+                        new File("/Users/zhanguowang/Documents/popertiesLauncher-0.0.1-SNAPSHOT.jar").toURL(),
+                }, MyAgent.classLoader,
+                "template","com/example/agentdemo/","com/example/popertieslauncher/",
+                "jar:file:/Users/zhanguowang/Documents/popertiesLauncher-0.0.1-SNAPSHOT.jar!/com/example/popertieslauncher/");
+        InputStream stream = customCL.getResourceAsStream("com/example/popertieslauncher/TestController.class");
         Assert.assertNotNull(stream);
     }
 }
